--- a/src/style/style.css
+++ b/src/style/style.css
@@ -17,6 +17,10 @@
   padding: 35px;
 }
 
+.root-container .main-box .quote-box .quote p {
+  font-family: 'Titillium Web', sans-serif;
+}
+
 @media (max-width: 600px) {
   .root-container .main-box .quote-box {
     width: 70%;
@@ -26,6 +30,18 @@
 @media (max-width: 350px) {
   .root-container .main-box .quote-box {
     width: 90%;
+  }
+  .root-container .main-box .quote-box .quote-footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .root-container .main-box .quote-box .quote-footer .share {
+    margin: 10px 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
