--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -13,11 +13,17 @@
         .quote-box {
             width: 40%;
             padding: 35px;
+
+            .quote {
+                p {
+                    font-family: 'Titillium Web', sans-serif;
+                }
+            }
         }
     }
 }
 
-@media(max-width:600px){
+@media(max-width:600px) {
     .root-container {
         .main-box {
             .quote-box {
@@ -26,11 +32,22 @@
         }
     }
 }
-@media(max-width:350px){
+
+@media(max-width:350px) {
     .root-container {
         .main-box {
             .quote-box {
                 width: 90%;
+
+                .quote-footer {
+                    flex-direction: column;
+                    align-items: center;
+
+                    .share {
+                        margin: 10px 0;
+
+                    }
+                }
             }
         }
     }
